# Muxkit.DeepLearning.Tools

./: .gitignore  AGENTS.md  LICENSE  Readme.md  __init__.py  api_tags.py  pyproject.toml
audio_tools/: PyroomSimulation.py  transforms.py  utils.py
audio_tools/bc_augmentation/: bc_augmentaion.py  bc_augmentation.py  bc_augmented_dataset.py  bc_augmention.py
audio_tools/bc_augmentation/unit_test/: test_bc_augmentation.py  test_bc_augmented.py
audio_tools/unit_test/: test_pyroom_simulation.py  test_transforms_extra.py  test_utils.py
dataset_tools/: CachableDataset.py  CacheableDataset.py  utils.py
dataset_tools/unit_test/: test_cachable_dataset.py
datasets/: base.py  homula_rir.py  jvs.py
datasets/unit_test/: test_download_mixin.py  test_homula_rir_download.py  test_jvs_download.py
docs/: README_EN.md  README_JP.md  README_ZH.md
lossfunction/: PLMLoss.py
lossfunction/unit_test/: test_plm_loss.py
model_tools/: __init__.py  stati.py
model_tools/unit_test/: test_stati.py
plot_tools/: SklearnConfusionMatrixPlotter.py  __init__.py
plot_tools/unit_test/: test_sklearn_confusion_matrix_plotter.py
score_tools/: ClassifierTester.py
score_tools/unit_test/: test_monolabel_tester.py
score_tools/unittest/: ClassifierTester.py
train_tools/: utils.py
train_tools/unit_test/: test_seed.py
unittest/: ClassifierTester.py
utl/: api_tags.py
utl/unit_test/: test_api_tags.py
