[tool.poetry]
name = "muxkit-deeplearning-tools"
version = "0.1.0"
description = "A tool set for Deep learning researching"
authors = ["Mux <muxxum65536@gmail.com>"]
readme = "README.md"
packages = [{include = "muxkit"}]

[tool.poetry.dependencies]
python = "^3.10"
torchvision = "^0.19.1"
torchaudio = "^2.4.1"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
scipy = "^1.14.1"
pyroomacoustics = "^0.7.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
